# CRIMELIVE

./: README.md
local_pc/: main_stream.py  main_view.py  main_view_av.py  requirements.txt
local_pc/app/: audio_manager.py  av_receiver.py  av_streamer.py  camera_manager.py  config.py  utils_io.py
ros2_shared/crml_msgs/: CMakeLists.txt  package.xml
ros2_shared/crml_msgs/msg/: AudioChunk.msg  ClipTag.msg  ClipTagArray.msg  NewsSubtitle.msg  PipelineState.msg
