<?xml version="1.0"?>
<package format="3">
  <name>crml_msgs</name>
  <version>0.0.1</version>
  <description>CRIMELIVE shared message definitions</description>
  <maintainer email="you@example.com">Saisei2004</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
